--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Make a task</h1>
+    <h1>Task list</h1>
     <input type="text" id="taskInput" placeholder="Enter text">
     <button id="taskButton" onclick="addTask()">Add task</button>
     <ul id="taskList">
